# s21_3DViewer_CPP

./: .gitmodules  README.md
c-projects/tabathae/: Makefile  doc.html  object.c  object.h  object_builder.c  object_builder.h  object_parser.c  object_parser.h
c-projects/tabathae/3DViewer_v1/: CMakeLists.txt  CMakeLists.txt.user.d9b3070  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h
c-projects/tabathae/tests/: affine_transformations_test.c  for_test1.txt  for_test3.txt  for_test4.txt  for_test5.txt  for_test6.txt  for_test777.txt  object_builder_test.c  parsing_obj_test.c  test_main.c  test_utils.c  test_utils.h
c-projects/wilmerno/: Makefile  doxconf
c-projects/wilmerno/backend/: 3d_viewer.h  affine_transformations.c  parser.c  parser.h
c-projects/wilmerno/documentation/html/: 3d__viewer_8h.html  3d__viewer_8h_source.html  affine__transformations_8c.html  annotated.html  classes.html  dir_8c739bbef76d64b22d6b0911c526dd76.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  parser_8c.html  parser_8h.html  parser_8h_source.html  structface__s-members.html  structface__s.html  structobject__s-members.html  structobject__s.html  unionpoint__u-members.html  unionpoint__u.html
c-projects/wilmerno/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+17 more)
c-projects/wilmerno/s21_3DViewer/: CMakeLists.txt  ObjectParameters.h  coloradapter.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h  myobject.cpp  myobject.h  scrollbaradapter.cpp  scrollbaradapter.h
c-projects/wilmerno/tests/: test.c
src/: Makefile  doxconf  main.cc  temp.cc
src/3DReviewer/: .gitignore  CMakeLists.txt  main.cc
src/3DReviewer/controller/: viewer_controller.h
src/3DReviewer/model/: exception.h  object.h  object_builder.cc  object_builder.h  parser.cc  parser.h  transformer.cc  transformer.h  viewer.cc  viewer.h
src/3DReviewer/model/tests/: affine_transformations_tests.cc  builder_tests.cc  parser_tests.cc  utils.cc  utils.h  viewer_test.cc
src/3DReviewer/view/: coloradapter.cc  coloradapter.h  glwidget.cc  glwidget.h  lineedit_adapter.cc  lineedit_adapter.h  lineeditadapter.cc  scrollbar_adapter.cc  scrollbaradapter.cc  scrollbaradapter.h  view.cc  view.h  view.ui
src/DeadInside/model/: model.cc  model.h  object_builder.cc  object_builder.h  parser.cc  parser.h  viewer.cc  viewer.h
src/DeadInside/model2/: main.cc  object.h  object_builder.cc  parser.cc  viewer.cc  viewer.h
src/model/: model.h  parser.cc  parser.h
